--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,85 +1,62 @@
-# ================================
-# Video Analytics Configuration
-# ================================
+# ===============================
+# Input configuration
+# ===============================
+input:
+  type: video            # video | image | image_folder | camera
+  path: data/input/video.mp4
+  camera_id: 0           # used only if type = camera
 
-app:
-  name: "object-detection-tracking"
-  environment: "development"   # development | staging | production
-
-# ----------------
-# Video Input
-# ----------------
-video:
-  source: "data/input.mp4"     # Path or camera index (0, 1, ...)
-  type: "file"                 # file | camera
-  resize:
-    enabled: true
-    width: 1280
-    height: 720
-  fps_limit: 30                # 0 = unlimited
-
-# ----------------
-# Detection Config
-# ----------------
+# ===============================
+# Detection configuration
+# ===============================
 detection:
-  framework: "yolo"
-  model:
-    name: "yolov8n.pt"          # yolov8n.pt | yolov8s.pt | yolov8m.pt
-    device: "auto"              # auto | cpu | cuda
+  model_path: models/yolov8.pt
   confidence_threshold: 0.5
   iou_threshold: 0.45
-  classes:                      # COCO class IDs
-    enabled: true
-    ids: [0, 2, 3, 5, 7]        # person, car, motorcycle, bus, truck
+  classes: []            # empty = all classes
 
-# ----------------
-# Tracking Config
-# ----------------
+# ===============================
+# Tracking configuration
+# ===============================
 tracking:
-  algorithm: "bytetrack"        # bytetrack | deepsort
-  max_age: 30                   # frames to keep "lost" tracks
-  min_hits: 3                   # frames before confirming track
+  enabled: true
+  algorithm: bytetrack  # centroid | deepsort | bytetrack
+  max_age: 30
+  min_hits: 3
   iou_threshold: 0.3
-  use_confidence_score: true
 
-# ----------------
-# Output Settings
-# ----------------
+# ===============================
+# Output configuration
+# ===============================
 output:
   save_video: true
-  video:
-    codec: "mp4v"
-    output_path: "outputs/videos/output.mp4"
-    draw:
-      boxes: true
-      labels: true
-      track_id: true
-      confidence: true
-  save_logs: true
-  logs:
-    format: ["csv", "json"]
-    output_dir: "outputs/logs"
+  save_images: false
+  video_path: data/output/output_video.mp4
+  image_dir: data/output/images/
 
-# ----------------
-# Logging
-# ----------------
+# ===============================
+# Logging configuration
+# ===============================
 logging:
-  level: "INFO"                 # DEBUG | INFO | WARNING | ERROR
-  console: true
-  file: true
-  file_path: "outputs/logs/app.log"
+  enable: true
+  formats: [csv, json]
+  output_dir: data/output/
+  log_every_n_frames: 1
 
-# ----------------
-# Performance & Monitoring
-# ----------------
+# ===============================
+# Performance configuration
+# ===============================
 performance:
-  enable_fps_counter: true
-  enable_latency_tracking: true
-  log_interval_sec: 5
+  target_fps: 20
+  display_fps: true
+  use_gpu: true
 
-# ----------------
-# Debug Options
-# ----------------
-debug:
-  show_window: true
-  exit_key: "q"
+# ===============================
+# Visualization configuration
+# ===============================
+visualization:
+  draw_boxes: true
+  draw_ids: true
+  draw_labels: true
+  box_thickness: 2
+  font_scale: 0.6
